.metadata/.plugins/org.eclipse.cdt.ui/P4_ej1_.build.log
20:04:17 **** Incremental Build of configuration Debug for project P4_ej1_ ****
make -j16 all 
arm-none-eabi-gcc "../Drivers/API/src/API_debounce.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API" -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/lauta/STM32Cube/Repository/STM32Cube_FW_F4_V1.27.1/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/API/src/API_debounce.d" -MT"Drivers/API/src/API_debounce.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/API/src/API_debounce.o"
arm-none-eabi-gcc "../Drivers/API/src/API_delay.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API" -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/lauta/STM32Cube/Repository/STM32Cube_FW_F4_V1.27.1/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/API/src/API_delay.d" -MT"Drivers/API/src/API_delay.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/API/src/API_delay.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API" -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/lauta/STM32Cube/Repository/STM32Cube_FW_F4_V1.27.1/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API" -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/lauta/STM32Cube/Repository/STM32Cube_FW_F4_V1.27.1/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API" -I"C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/lauta/STM32Cube/Repository/STM32Cube_FW_F4_V1.27.1/Drivers/BSP/STM32F4xx_Nucleo_144" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
In file included from ../Drivers/API/src/API_debounce.c:24:
C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc/API_debounce.h:19:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'debounceState_t'
   19 | debounceState_t initState;
      | ^~~~~~~~~~~~~~~
C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc/API_debounce.h:19:1: error: unknown type name 'debounceState_t'
../Drivers/API/src/API_debounce.c:36:8: error: unknown type name 'debounceState_t'
   36 | static debounceState_t currentState;
      |        ^~~~~~~~~~~~~~~
../Drivers/API/src/API_debounce.c: In function 'debounceFSM_init':
../Drivers/API/src/API_debounce.c:48:34: error: lvalue required as left operand of assignment
   48 |  if(BSP_PB_GetState(BUTTON_USER) =! GPIO_PIN_SET )
      |                                  ^
In file included from ../Core/Src/main.c:21:
C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc/API_debounce.h:19:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'debounceState_t'
   19 | debounceState_t initState;
      | ^~~~~~~~~~~~~~~
../Drivers/API/src/API_debounce.c:51:3: warning: implicit declaration of function 'ErrorHandler' [-Wimplicit-function-declaration]
   51 |   ErrorHandler(ErrorFlag);
      |   ^~~~~~~~~~~~
C:/Users/lauta/Desktop/CESE/Materias/PdM/PdM_workspace/P4_ej1_/Drivers/API/inc/API_debounce.h:19:1: error: unknown type name 'debounceState_t'
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:133:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  133 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:166:13: error: invalid storage class for function 'MX_GPIO_Init'
  166 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:215:1: error: expected declaration or statement at end of input
  215 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:27:13: warning: 'MX_GPIO_Init' used but never defined
   27 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:28:13: warning: 'MX_USART2_UART_Init' used but never defined
   28 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Drivers/API/src/API_debounce.c: In function 'buttonPressed':
../Drivers/API/src/API_debounce.c:116:2: warning: implicit declaration of function 'BSP_LED_TOGGLE' [-Wimplicit-function-declaration]
  116 |  BSP_LED_TOGGLE(LED1);
      |  ^~~~~~~~~~~~~~
../Core/Src/main.c:206:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  206 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:166:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  166 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:133:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  133 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:86:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
   86 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:81:8: warning: 'buttonReleased' defined but not used [-Wunused-function]
   81 |   void buttonReleased()
      |        ^~~~~~~~~~~~~~
../Core/Src/main.c:77:8: warning: 'buttonPressed' defined but not used [-Wunused-function]
   77 |   void buttonPressed()
      |        ^~~~~~~~~~~~~
make: *** [Drivers/API/src/subdir.mk:22: Drivers/API/src/API_debounce.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

20:04:19 Build Failed. 12 errors, 10 warnings. (took 2s.91ms)

